Fixed carousel bottom spacing; removed margin-bottom from images to better present them at actual proportions.

--- a/src/styles/homepage.scss
+++ b/src/styles/homepage.scss
@@ -143,7 +143,7 @@ $spacing: 20px;
       height: 70px;
       display: flex;
       position: absolute;
-      bottom: -70px;
+      // bottom: -70px;
       .description {
         display: flex;
         justify-content: center;
